# Yamli

./: README.md  example.yaml  pyproject.toml
.github/workflows/: main.yaml
tests/: invalid.yaml  test_parser.py  valid.yaml
yamli/: app.py  cli.py  parser.py  yaml_parser.py
